# phraze

./: .gitignore  CHANGELOG.markdown  Cargo.toml  build.rs  deny.toml  dist-workspace.toml  readme.markdown
.github/workflows/: release.yml
benches/: generate_passphrase.rs
src/: cli.rs  file_reader.rs  lib.rs  main.rs  separators.rs  unicode_normalization_check.rs
tests/: list_reading_tests.rs  minimum_entropy_tests.rs
word-lists/: eff-short-1.txt  mnemonicode.txt
