[package]
name = "phraze"
description = "Random passphrase generator"
version = "0.3.2"
edition = "2021"
authors = ["sts10 <sschlinkert@gmail.com>"]
license = "MPL-2.0"
readme = "readme.markdown"
repository = "https://github.com/sts10/phraze"

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.7", features = ["derive"] }
unicode-normalization = "0.1.22"
include-lines = "1.1.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "generate_passphrase"
harness = false
