[package]
name = "phraze"
description = "Random passphrase generator"
version = "0.3.6"
edition = "2021"
authors = ["sts10 <sschlinkert@gmail.com>"]
license = "MPL-2.0"
readme = "readme.markdown"
repository = "https://github.com/sts10/phraze"
keywords = ["passphrase", "passwords"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.7", features = ["derive"] }
unicode-normalization = "0.1.22"
include-lines = "1.1.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "generate_passphrase"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
