[package]
name = "phraze"
description = "Random passphrase generator"
version = "0.3.25"
edition = "2024"
authors = ["sts10 <sschlinkert@gmail.com>"]
license = "MPL-2.0"
readme = "readme.markdown"
repository = "https://github.com/sts10/phraze"
keywords = ["passphrase", "passwords"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.10.0"
clap = { version = "4.5.18", features = ["derive"] }
unicode-normalization = "0.1.24"
include-lines = "1.1.2"

[build-dependencies]
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.29"
clap_mangen = "0.2.23"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "generate_passphrase"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
